before spring festival

--- a/src/assets/404.html
+++ b/src/assets/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>404 Jump Back - VicBlog</title>
     <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
+      // Single PageConfig Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
       // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
       // ----------------------------------------------------------------------
