--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -6,6 +6,8 @@
     <title>VicBlog</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <p>Initializing...</p>
+    </div>
   </body>
 </html>
