--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="site" content="https://viccrubs.tk" />
+    <meta name="description" content="VicBlog" />
     <title>VicBlog</title>
   </head>
   <body>
