--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -6,7 +6,7 @@
     <meta name="site" content="https://viccrubs.tk" />
     <meta name="description" content="VicBlog" />
     <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#999999" />
+    <meta name="theme-color" content="#4695F1" />
     <title>VicBlog</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
